parser and scanner/one_for_allParser.py
# Generated from one_for_all.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class one_for_allParser ( Parser ):

    grammarFileName = "one_for_all.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'&&'", "'||'", "'true'", "'false'", "'if'", 
                     "'else'", "'while'", "'var'", "'program'", "'class'", 
                     "'private'", "'public'", "'main'", "'read'", "'function'", 
                     "'write'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "'+'", "'-'", "'*'", "'/'", "'='", "'!='", "'>'", "'<'", 
                     "'>='", "'<='", "'=='", "';'", "':'", "'.'", "','", 
                     "'int'", "'float'", "'bool'", "'string'", "<INVALID>", 
                     "'return'" ]

    symbolicNames = [ "<INVALID>", "STRING", "FLOAT", "INT", "BOOLEAN", 
                      "TOK_AND", "TOK_OR", "TRUE", "FALSE", "TOK_IF", "TOK_ELSE", 
                      "TOK_WHILE", "TOK_VAR", "TOK_PROGRAM", "TOK_CLASS", 
                      "TOK_PRIVATE", "TOK_PUBLIC", "TOK_MAIN", "TOK_READ", 
                      "TOK_FUNCTION", "TOK_WRITE", "TOK_LPAREN", "TOK_RPAREN", 
                      "TOK_LBRACE", "TOK_RBRACE", "TOK_LBRACKET", "TOK_RBRACKET", 
                      "TOK_PLUS", "TOK_MINUS", "TOK_MULTIPLICATION", "TOK_DIVISION", 
                      "TOK_EQUAL", "TOK_DIFFERENT", "TOK_GREATER", "TOK_LESS", 
                      "TOK_GREATER_EQ", "TOK_LESS_EQ", "TOK_SAME", "TOK_SEMICOLON", 
                      "TOK_COLON", "TOK_DOT", "TOK_COMMA", "TOK_INT", "TOK_FLOAT", 
                      "TOK_BOOLEAN", "TOK_STRING", "TOK_ID", "TOK_RETURN", 
                      "ESPACIOS" ]

    RULE_programa = 0
    RULE_classes = 1
    RULE_inheritance = 2
    RULE_class_public = 3
    RULE_class_private = 4
    RULE_funcs = 5
    RULE_parameters = 6
    RULE_variables = 7
    RULE_other_var = 8
    RULE_data_type = 9
    RULE_main = 10
    RULE_block = 11
    RULE_statute = 12
    RULE_assignment = 13
    RULE_condition = 14
    RULE_loop = 15
    RULE_input_ = 16
    RULE_output = 17
    RULE_output_aux = 18
    RULE_escrituraaux = 19
    RULE_conditionelse = 20
    RULE_expr = 21
    RULE_expr_aux = 22
    RULE_relational_expr = 23
    RULE_sumMinus_expr = 24
    RULE_expr_aux2 = 25
    RULE_multiDiv_expr = 26
    RULE_expr_aux3 = 27
    RULE_factor = 28
    RULE_constant = 29
    RULE_id_ = 30

    ruleNames =  [ "programa", "classes", "inheritance", "class_public", 
                   "class_private", "funcs", "parameters", "variables", 
                   "other_var", "data_type", "main", "block", "statute", 
                   "assignment", "condition", "loop", "input_", "output", 
                   "output_aux", "escrituraaux", "conditionelse", "expr", 
                   "expr_aux", "relational_expr", "sumMinus_expr", "expr_aux2", 
                   "multiDiv_expr", "expr_aux3", "factor", "constant", "id_" ]

    EOF = Token.EOF
    STRING=1
    FLOAT=2
    INT=3
    BOOLEAN=4
    TOK_AND=5
    TOK_OR=6
    TRUE=7
    FALSE=8
    TOK_IF=9
    TOK_ELSE=10
    TOK_WHILE=11
    TOK_VAR=12
    TOK_PROGRAM=13
    TOK_CLASS=14
    TOK_PRIVATE=15
    TOK_PUBLIC=16
    TOK_MAIN=17
    TOK_READ=18
    TOK_FUNCTION=19
    TOK_WRITE=20
    TOK_LPAREN=21
    TOK_RPAREN=22
    TOK_LBRACE=23
    TOK_RBRACE=24
    TOK_LBRACKET=25
    TOK_RBRACKET=26
    TOK_PLUS=27
    TOK_MINUS=28
    TOK_MULTIPLICATION=29
    TOK_DIVISION=30
    TOK_EQUAL=31
    TOK_DIFFERENT=32
    TOK_GREATER=33
    TOK_LESS=34
    TOK_GREATER_EQ=35
    TOK_LESS_EQ=36
    TOK_SAME=37
    TOK_SEMICOLON=38
    TOK_COLON=39
    TOK_DOT=40
    TOK_COMMA=41
    TOK_INT=42
    TOK_FLOAT=43
    TOK_BOOLEAN=44
    TOK_STRING=45
    TOK_ID=46
    TOK_RETURN=47
    ESPACIOS=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TOK_PROGRAM(self):
            return self.getToken(one_for_allParser.TOK_PROGRAM, 0)

        def TOK_ID(self):
            return self.getToken(one_for_allParser.TOK_ID, 0)

        def TOK_SEMICOLON(self):
            return self.getToken(one_for_allParser.TOK_SEMICOLON, 0)

        def main(self):
            return self.getTypedRuleContext(one_for_allParser.MainContext,0)


        def classes(self):
            return self.getTypedRuleContext(one_for_allParser.ClassesContext,0)


        def variables(self):
            return self.getTypedRuleContext(one_for_allParser.VariablesContext,0)


        def funcs(self):
            return self.getTypedRuleContext(one_for_allParser.FuncsContext,0)


        def getRuleIndex(self):
            return one_for_allParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = one_for_allParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(one_for_allParser.TOK_PROGRAM)
            self.state = 63
            self.match(one_for_allParser.TOK_ID)
            self.state = 64
            self.match(one_for_allParser.TOK_SEMICOLON)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==one_for_allParser.TOK_CLASS:
                self.state = 65
                self.classes()


            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==one_for_allParser.TOK_VAR:
                self.state = 68
                self.variables()


            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==one_for_allParser.TOK_FUNCTION:
                self.state = 71
                self.funcs()


            self.state = 74
            self.main()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClassesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TOK_CLASS(self, i:int=None):
            if i is None:
                return self.getTokens(one_for_allParser.TOK_CLASS)
            else:
                return self.getToken(one_for_allParser.TOK_CLASS, i)

        def TOK_ID(self, i:int=None):
            if i is None:
                return self.getTokens(one_for_allParser.TOK_ID)
            else:
                return self.getToken(one_for_allParser.TOK_ID, i)

        def inheritance(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(one_for_allParser.InheritanceContext)
            else:
                return self.getTypedRuleContext(one_for_allParser.InheritanceContext,i)


        def TOK_LBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(one_for_allParser.TOK_LBRACE)
            else:
                return self.getToken(one_for_allParser.TOK_LBRACE, i)

        def class_public(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(one_for_allParser.Class_publicContext)
            else:
                return self.getTypedRuleContext(one_for_allParser.Class_publicContext,i)


        def class_private(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(one_for_allParser.Class_privateContext)
            else:
                return self.getTypedRuleContext(one_for_allParser.Class_privateContext,i)


        def TOK_RBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(one_for_allParser.TOK_RBRACE)
            else:
                return self.getToken(one_for_allParser.TOK_RBRACE, i)

        def getRuleIndex(self):
            return one_for_allParser.RULE_classes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClasses" ):
                listener.enterClasses(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClasses" ):
                listener.exitClasses(self)




    def classes(self):

        localctx = one_for_allParser.ClassesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 76
                self.match(one_for_allParser.TOK_CLASS)
                self.state = 77
                self.match(one_for_allParser.TOK_ID)
                self.state = 78
                self.inheritance()
                self.state = 79
                self.match(one_for_allParser.TOK_LBRACE)
                self.state = 80
                self.class_public()
                self.state = 81
                self.class_private()
                self.state = 82
                self.match(one_for_allParser.TOK_RBRACE)
                self.state = 86 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==one_for_allParser.TOK_CLASS):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InheritanceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TOK_COLON(self):
            return self.getToken(one_for_allParser.TOK_COLON, 0)

        def TOK_ID(self):
            return self.getToken(one_for_allParser.TOK_ID, 0)

        def getRuleIndex(self):
            return one_for_allParser.RULE_inheritance

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInheritance" ):
                listener.enterInheritance(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInheritance" ):
                listener.exitInheritance(self)




    def inheritance(self):

        localctx = one_for_allParser.InheritanceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_inheritance)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==one_for_allParser.TOK_COLON:
                self.state = 88
                self.match(one_for_allParser.TOK_COLON)
                self.state = 89
                self.match(one_for_allParser.TOK_ID)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Class_publicContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TOK_PUBLIC(self):
            return self.getToken(one_for_allParser.TOK_PUBLIC, 0)

        def TOK_COLON(self):
            return self.getToken(one_for_allParser.TOK_COLON, 0)

        def TOK_LBRACE(self):
            return self.getToken(one_for_allParser.TOK_LBRACE, 0)

        def TOK_RBRACE(self):
            return self.getToken(one_for_allParser.TOK_RBRACE, 0)

        def variables(self):
            return self.getTypedRuleContext(one_for_allParser.VariablesContext,0)


        def funcs(self):
            return self.getTypedRuleContext(one_for_allParser.FuncsContext,0)


        def getRuleIndex(self):
            return one_for_allParser.RULE_class_public

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_public" ):
                listener.enterClass_public(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_public" ):
                listener.exitClass_public(self)




    def class_public(self):

        localctx = one_for_allParser.Class_publicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_class_public)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(one_for_allParser.TOK_PUBLIC)
            self.state = 93
            self.match(one_for_allParser.TOK_COLON)
            self.state = 94
            self.match(one_for_allParser.TOK_LBRACE)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==one_for_allParser.TOK_VAR:
                self.state = 95
                self.variables()


            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==one_for_allParser.TOK_FUNCTION:
                self.state = 98
                self.funcs()


            self.state = 101
            self.match(one_for_allParser.TOK_RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Class_privateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TOK_PRIVATE(self):
            return self.getToken(one_for_allParser.TOK_PRIVATE, 0)

        def TOK_COLON(self):
            return self.getToken(one_for_allParser.TOK_COLON, 0)

        def TOK_LBRACE(self):
            return self.getToken(one_for_allParser.TOK_LBRACE, 0)

        def TOK_RBRACE(self):
            return self.getToken(one_for_allParser.TOK_RBRACE, 0)

        def variables(self):
            return self.getTypedRuleContext(one_for_allParser.VariablesContext,0)


        def funcs(self):
            return self.getTypedRuleContext(one_for_allParser.FuncsContext,0)


        def getRuleIndex(self):
            return one_for_allParser.RULE_class_private

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_private" ):
                listener.enterClass_private(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_private" ):
                listener.exitClass_private(self)




    def class_private(self):

        localctx = one_for_allParser.Class_privateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_class_private)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(one_for_allParser.TOK_PRIVATE)
            self.state = 104
            self.match(one_for_allParser.TOK_COLON)
            self.state = 105
            self.match(one_for_allParser.TOK_LBRACE)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==one_for_allParser.TOK_VAR:
                self.state = 106
                self.variables()


            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==one_for_allParser.TOK_FUNCTION:
                self.state = 109
                self.funcs()


            self.state = 112
            self.match(one_for_allParser.TOK_RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TOK_FUNCTION(self, i:int=None):
            if i is None:
                return self.getTokens(one_for_allParser.TOK_FUNCTION)
            else:
                return self.getToken(one_for_allParser.TOK_FUNCTION, i)

        def data_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(one_for_allParser.Data_typeContext)
            else:
                return self.getTypedRuleContext(one_for_allParser.Data_typeContext,i)


        def TOK_ID(self, i:int=None):
            if i is None:
                return self.getTokens(one_for_allParser.TOK_ID)
            else:
                return self.getToken(one_for_allParser.TOK_ID, i)

        def TOK_LPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(one_for_allParser.TOK_LPAREN)
            else:
                return self.getToken(one_for_allParser.TOK_LPAREN, i)

        def parameters(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(one_for_allParser.ParametersContext)
            else:
                return self.getTypedRuleContext(one_for_allParser.ParametersContext,i)


        def TOK_RPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(one_for_allParser.TOK_RPAREN)
            else:
                return self.getToken(one_for_allParser.TOK_RPAREN, i)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(one_for_allParser.BlockContext)
            else:
                return self.getTypedRuleContext(one_for_allParser.BlockContext,i)


        def getRuleIndex(self):
            return one_for_allParser.RULE_funcs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncs" ):
                listener.enterFuncs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncs" ):
                listener.exitFuncs(self)




    def funcs(self):

        localctx = one_for_allParser.FuncsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 114
                self.match(one_for_allParser.TOK_FUNCTION)
                self.state = 115
                self.data_type()
                self.state = 116
                self.match(one_for_allParser.TOK_ID)
                self.state = 117
                self.match(one_for_allParser.TOK_LPAREN)
                self.state = 118
                self.parameters()
                self.state = 119
                self.match(one_for_allParser.TOK_RPAREN)
                self.state = 120
                self.block()
                self.state = 124 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==one_for_allParser.TOK_FUNCTION):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TOK_VAR(self, i:int=None):
            if i is None:
                return self.getTokens(one_for_allParser.TOK_VAR)
            else:
                return self.getToken(one_for_allParser.TOK_VAR, i)

        def data_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(one_for_allParser.Data_typeContext)
            else:
                return self.getTypedRuleContext(one_for_allParser.Data_typeContext,i)


        def TOK_ID(self, i:int=None):
            if i is None:
                return self.getTokens(one_for_allParser.TOK_ID)
            else:
                return self.getToken(one_for_allParser.TOK_ID, i)

        def TOK_COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(one_for_allParser.TOK_COMMA)
            else:
                return self.getToken(one_for_allParser.TOK_COMMA, i)

        def getRuleIndex(self):
            return one_for_allParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)




    def parameters(self):

        localctx = one_for_allParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==one_for_allParser.TOK_VAR:
                self.state = 126
                self.match(one_for_allParser.TOK_VAR)
                self.state = 127
                self.data_type()
                self.state = 128
                self.match(one_for_allParser.TOK_ID)
                self.state = 129
                self.match(one_for_allParser.TOK_COMMA)
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariablesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TOK_VAR(self, i:int=None):
            if i is None:
                return self.getTokens(one_for_allParser.TOK_VAR)
            else:
                return self.getToken(one_for_allParser.TOK_VAR, i)

        def data_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(one_for_allParser.Data_typeContext)
            else:
                return self.getTypedRuleContext(one_for_allParser.Data_typeContext,i)


        def TOK_ID(self, i:int=None):
            if i is None:
                return self.getTokens(one_for_allParser.TOK_ID)
            else:
                return self.getToken(one_for_allParser.TOK_ID, i)

        def other_var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(one_for_allParser.Other_varContext)
            else:
                return self.getTypedRuleContext(one_for_allParser.Other_varContext,i)


        def TOK_SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(one_for_allParser.TOK_SEMICOLON)
            else:
                return self.getToken(one_for_allParser.TOK_SEMICOLON, i)

        def getRuleIndex(self):
            return one_for_allParser.RULE_variables

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariables" ):
                listener.enterVariables(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariables" ):
                listener.exitVariables(self)




    def variables(self):

        localctx = one_for_allParser.VariablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_variables)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 136
                    self.match(one_for_allParser.TOK_VAR)
                    self.state = 137
                    self.data_type()
                    self.state = 138
                    self.match(one_for_allParser.TOK_ID)
                    self.state = 139
                    self.other_var()
                    self.state = 140
                    self.match(one_for_allParser.TOK_SEMICOLON)

                else:
                    raise NoViableAltException(self)
                self.state = 144 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Other_varContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TOK_COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(one_for_allParser.TOK_COMMA)
            else:
                return self.getToken(one_for_allParser.TOK_COMMA, i)

        def TOK_ID(self, i:int=None):
            if i is None:
                return self.getTokens(one_for_allParser.TOK_ID)
            else:
                return self.getToken(one_for_allParser.TOK_ID, i)

        def getRuleIndex(self):
            return one_for_allParser.RULE_other_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOther_var" ):
                listener.enterOther_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOther_var" ):
                listener.exitOther_var(self)




    def other_var(self):

        localctx = one_for_allParser.Other_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_other_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==one_for_allParser.TOK_COMMA:
                self.state = 146
                self.match(one_for_allParser.TOK_COMMA)
                self.state = 147
                self.match(one_for_allParser.TOK_ID)
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Data_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TOK_INT(self):
            return self.getToken(one_for_allParser.TOK_INT, 0)

        def TOK_FLOAT(self):
            return self.getToken(one_for_allParser.TOK_FLOAT, 0)

        def TOK_STRING(self):
            return self.getToken(one_for_allParser.TOK_STRING, 0)

        def TOK_BOOLEAN(self):
            return self.getToken(one_for_allParser.TOK_BOOLEAN, 0)

        def TOK_ID(self):
            return self.getToken(one_for_allParser.TOK_ID, 0)

        def getRuleIndex(self):
            return one_for_allParser.RULE_data_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData_type" ):
                listener.enterData_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData_type" ):
                listener.exitData_type(self)




    def data_type(self):

        localctx = one_for_allParser.Data_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_data_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << one_for_allParser.TOK_INT) | (1 << one_for_allParser.TOK_FLOAT) | (1 << one_for_allParser.TOK_BOOLEAN) | (1 << one_for_allParser.TOK_STRING) | (1 << one_for_allParser.TOK_ID))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MainContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TOK_MAIN(self):
            return self.getToken(one_for_allParser.TOK_MAIN, 0)

        def block(self):
            return self.getTypedRuleContext(one_for_allParser.BlockContext,0)


        def getRuleIndex(self):
            return one_for_allParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)




    def main(self):

        localctx = one_for_allParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_main)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(one_for_allParser.TOK_MAIN)
            self.state = 156
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TOK_LBRACE(self):
            return self.getToken(one_for_allParser.TOK_LBRACE, 0)

        def statute(self):
            return self.getTypedRuleContext(one_for_allParser.StatuteContext,0)


        def TOK_RBRACE(self):
            return self.getToken(one_for_allParser.TOK_RBRACE, 0)

        def getRuleIndex(self):
            return one_for_allParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):
